# riskcal

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/source/api/: analysis.rst
research/attack_aware_noise_calibration/: README.md
research/unifying_risk/: README.md
src/riskcal/: __init__.py
src/riskcal/analysis/: __init__.py  conversions.py
src/riskcal/analysis/rdp/: __init__.py  converter.pyx  pure.py
tests/: test_conversions.py
